Fixed overflow CSS classes; missing comma

--- a/src/props/layout/overflow/index.css
+++ b/src/props/layout/overflow/index.css
@@ -1,59 +1,71 @@
-.overflow-auto .hover\:overflow-auto:hover,
+.overflow-auto,
+.hover\:overflow-auto:hover,
 .active\:overflow-auto:active,
 .focus\:overflow-auto:focus {
 	overflow: auto;
 }
-.overflow-hidden .hover\:overflow-hidden:hover,
+.overflow-hidden,
+.hover\:overflow-hidden:hover,
 .active\:overflow-hidden:active,
 .focus\:overflow-hidden:focus {
 	overflow: hidden;
 }
-.overflow-visible .hover\:overflow-visible:hover,
+.overflow-visible,
+.hover\:overflow-visible:hover,
 .active\:overflow-visible:active,
 .focus\:overflow-visible:focus {
 	overflow: visible;
 }
-.overflow-scroll .hover\:overflow-scroll:hover,
+.overflow-scroll,
+.hover\:overflow-scroll:hover,
 .active\:overflow-scroll:active,
 .focus\:overflow-scroll:focus {
 	overflow: scroll;
 }
-.overflowX-auto .hover\:overflowX-auto:hover,
+.overflowX-auto,
+.hover\:overflowX-auto:hover,
 .active\:overflowX-auto:active,
 .focus\:overflowX-auto:focus {
 	overflow-x: auto;
 }
-.overflowY-auto .hover\:overflowY-auto:hover,
+.overflowY-auto,
+.hover\:overflowY-auto:hover,
 .active\:overflowY-auto:active,
 .focus\:overflowY-auto:focus {
 	overflow-y: auto;
 }
-.overflowX-hidden .hover\:overflowX-hidden:hover,
+.overflowX-hidden,
+.hover\:overflowX-hidden:hover,
 .active\:overflowX-hidden:active,
 .focus\:overflowX-hidden:focus {
 	overflow-x: hidden;
 }
-.overflowY-hidden .hover\:overflowY-hidden:hover,
+.overflowY-hidden,
+.hover\:overflowY-hidden:hover,
 .active\:overflowY-hidden:active,
 .focus\:overflowY-hidden:focus {
 	overflow-y: hidden;
 }
-.overflowX-visible .hover\:overflowX-visible:hover,
+.overflowX-visible,
+.hover\:overflowX-visible:hover,
 .active\:overflowX-visible:active,
 .focus\:overflowX-visible:focus {
 	overflow-x: visible;
 }
-.overflowY-visible .hover\:overflowY-visible:hover,
+.overflowY-visible,
+.hover\:overflowY-visible:hover,
 .active\:overflowY-visible:active,
 .focus\:overflowY-visible:focus {
 	overflow-y: visible;
 }
-.overflowX-scroll .hover\:overflowX-scroll:hover,
+.overflowX-scroll,
+.hover\:overflowX-scroll:hover,
 .active\:overflowX-scroll:active,
 .focus\:overflowX-scroll:focus {
 	overflow-x: scroll;
 }
-.overflowY-scroll .hover\:overflowY-scroll:hover,
+.overflowY-scroll,
+.hover\:overflowY-scroll:hover,
 .active\:overflowY-scroll:active,
 .focus\:overflowY-scroll:focus {
 	overflow-y: scroll;
